# podcasty

./: .gitignore  README.md  notes.txt  pyproject.toml
podcasty/: audio.py  download.py  search.py  summarize.py  transcribe.py  translate.py
tests/: test_download.py  test_search.py
