[tool.poetry]
name = "podcasty"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
youtube-dl = "^2021.12.17"
spacy = "^3.5.3"
bert-extractive-summarizer = "^0.10.1"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
